Bug 106545 - [EFL][WK2] Contents gets blurry when page is scrolled down
Summary: [EFL][WK2] Contents gets blurry when page is scrolled down
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit EFL (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mikhail Pozdnyakov
URL:
Keywords:
Depends on:
Blocks: 103105
  Show dependency treegraph
 
Reported: 2013-01-10 02:51 PST by Mikhail Pozdnyakov
Modified: 2013-01-10 05:38 PST (History)
8 users (show)

See Also:


Attachments
patch (2.13 KB, patch)
2013-01-10 04:48 PST, Mikhail Pozdnyakov
eflews.bot: commit-queue-
Details | Formatted Diff | Diff
patch (2.22 KB, patch)
2013-01-10 05:02 PST, Mikhail Pozdnyakov
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Pozdnyakov 2013-01-10 02:51:37 PST
Steps to reproduce:
1) open google.com in EFL mini browser
2) search smth in google
3) scroll to the down of the page
4) page contents gets blurry
Comment 1 Mikhail Pozdnyakov 2013-01-10 04:48:44 PST
Created attachment 182114 [details]
patch
Comment 2 EFL EWS Bot 2013-01-10 04:53:56 PST
Comment on attachment 182114 [details]
patch

Attachment 182114 [details] did not pass efl-ews (efl):
Output: http://queues.webkit.org/results/15775746
Comment 3 Early Warning System Bot 2013-01-10 04:54:12 PST
Comment on attachment 182114 [details]
patch

Attachment 182114 [details] did not pass qt-wk2-ews (qt):
Output: http://queues.webkit.org/results/15771943
Comment 4 Mikhail Pozdnyakov 2013-01-10 05:02:26 PST
Comment on attachment 182114 [details]
patch

ahh, wrong patch..
Comment 5 Mikhail Pozdnyakov 2013-01-10 05:02:55 PST
Created attachment 182116 [details]
patch
Comment 6 WebKit Review Bot 2013-01-10 05:38:50 PST
Comment on attachment 182116 [details]
patch

Clearing flags on attachment: 182116

Committed r139312: <http://trac.webkit.org/changeset/139312>
Comment 7 WebKit Review Bot 2013-01-10 05:38:55 PST
All reviewed patches have been landed.  Closing bug.