[EFL][WK2] Contents gets blurry when page is scrolled down https://bugs.webkit.org/show_bug.cgi?id=106545

Reviewed by Kenneth Rohde Christiansen.

The bound values for scrolling also should be pixel aligned, otherwise
it leads to page contents blurriness when the page is scrolled down.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::pageDidRequestScroll):


Canonical link: https://commits.webkit.org/124760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139312 268f45cc-cd09-0410-ab3c-d52691b4dbfc